Closed
Bug 1347813
Opened 9 years ago
Closed 9 years ago
the incoming audio's packet loss is zero when get the packet loss from the function getstat
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: xpeng, Assigned: drno)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:51.0) Gecko/20100101 Firefox/51.0
Build ID: 20170125094131
Steps to reproduce:
Set packet loss rate at the media server .
Actual results:
look at the value of the function getstat.
the incoming audio packet loss is always zero .
the outgoing audio packet loss is not zero .
the incoming video packet loss is not zero .
the outgoing video packet loss is not zero.
the same value as the about:webrtc page.
Expected results:
the incoming audio packet loss should not be zero
Updated•9 years ago
|
Status: UNCONFIRMED → NEW
Rank: 23
Component: WebRTC: Audio/Video → WebRTC: Networking
Ever confirmed: true
Priority: -- → P2
This issue was caused by:
##Files name:
media/webrtc/trunk/webrtc/voice_engine/channel.cc
##Function name:
int
Channel::GetRTPStatistics(
unsigned int& averageJitterMs,
unsigned int& maxJitterMs,
unsigned int& discardedPackets,
unsigned int& cumulativeLost)
##Issued code:(I'm not sure the exactly line number...)
cumulativeLost = stats.cumulative_lost; // <----- The original code, missed the member "rtcp". The compiler did not tell this issue, why???
##Correct code:
cumulativeLost = stats.rtcp.cumulative_lost; // <--- The correct code
I check this issue against Firefox 51 source archive. Hope it could help.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 3•9 years ago
|
||
The reason it compiles is this: http://searchfox.org/mozilla-central/source/media/webrtc/trunk/webrtc/voice_engine/channel.cc#150
ChannelStatistics extends RtcpStatistics, so itself has a cumulativeLost value. But it also defines RtcpStatistics as its member |rtcp|. Not confusing at all :-(
| Assignee | ||
Comment 4•9 years ago
|
||
And awesome work guys for not only reporting this, but also tracking it down!
Comment 5•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8849277 [details]
Bug 1347813: take cumulativeLost from RTCP.
https://reviewboard.mozilla.org/r/122092/#review124250
Attachment #8849277 -
Flags: review?(rjesup) → review+
(In reply to Nils Ohlmeier [:drno] from comment #4)
> And awesome work guys for not only reporting this, but also tracking it down!
Thanks for your reply. Glad it could help :)
Pushed by drno@ohlmeier.org:
https://hg.mozilla.org/integration/autoland/rev/0a0f9c8ff541
take cumulativeLost from RTCP. r=jesup
Comment 9•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → drno
Flags: needinfo?(drno)
You need to log in
before you can comment on or make changes to this bug.
Description
•