Bug 1347813: take cumulativeLost from RTCP. r=jesup

MozReview-Commit-ID: LIPxL8vcnHl