media/webrtc/trunk/webrtc/voice_engine/channel.cc
@@ -3171,7 +3171,7 @@ Channel::GetRTPStatistics(
       // Scale RTP statistics given the current playout frequency
       maxJitterMs = stats.max_jitter / (playoutFrequency / 1000);
       averageJitterMs = stats.rtcp.jitter / (playoutFrequency / 1000);
-      cumulativeLost = stats.cumulative_lost;
+      cumulativeLost = stats.rtcp.cumulative_lost;
     }
 
     discardedPackets = _numberOfDiscardedPackets;
